Update meta description

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: Luis Gustavo S. Barreto
 description: Linux Salva!
-meta_description: "Luis Gustavo S. Barreto"
+meta_description: "Luis Gustavo S. Barreto - Linux, Qt, QML, C++, Node.js, Web, JavaScript"
 
 markdown: redcarpet
 highlighter: pygments
