--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo: false
 paginate: 15
 baseurl: /
 domain_name: 'http://gustavosbarreto.github.io'
-google_analytics: 'UA-XXXXXXXX-X'
+google_analytics: 'UA-66494222-1'
 
 # Details for the RSS feed generator
 url:            'http://gustavosbarreto.github.io'
